tutorials/outputs/topic-07-filters_output.txt
INFO: Using SIF: /software/cerebras/cs_sdk-1.2.0/sdk-cbcore-202406260214-3-f03c8e31.sif
INFO: User's specified CSL_IMPORT_PATH=/software/cerebras/cs_sdk-1.2.0/
NOTE: CSL_IMPORT_PATH accepts colon separated list of paths generated by 'realpath <path>'
INFO: Bind path /software/cerebras/cs_sdk-1.2.0/
INFO: Commands of user-specified mount paths:  --bind=/software/cerebras/cs_sdk-1.2.0/
./memcpyEdge/south.csl:17:37: error: expected color ID in the range [0,24), got: 32
param USER_IN_1: color = @get_color(32);
                                    ^
./layout.csl:104:5: error: semantic error in module imported here
    @set_tile_code(pe_x, 2, "memcpyEdge/south.csl", .{
    ^
